# Scripting-Course

./: .gitignore  03-information-services.md  03-joins-like-methods-lab.ipynb  Downgrade sqlalchemy  LIS 4235 Syllabus Sp18.docx  Process Data.ipynb  README.md  SUMMARY.md  build-all.sh  build.sh  datasets.md  environment.yml  postBuild  pyproject.toml  slides-01-introduction.html  slides-01-introduction.md  start  syllabus-short.md  syllabus.md
data/: Generate Data.ipynb  IMLS_Appropriations__FY_2002-2017_.csv  beers.csv  cat_data.tsv  circulation.sqlite  close_venues.json  imls_mini_by_state.csv  per_pupil_education_spending_2021.csv  popular_venues.json  voldemort_tweets.csv  weather-example.csv  week2.db
docs/: chat-model-strategies.md
exercises/: split-apply-combine-examples.ipynb
labs/: 01 - Getting Started.ipynb  01 - Getting Started.md  01_-_Getting_Started.html  01_-_Getting_Started.md  02-database-intropython-lab.ipynb  02-database-intropython-lab.md  03-joins-like-methods-lab.ipynb  03-joins-like-methods-lab.md  03_joins_like_methods_lab.ipynb  04-Series-DataFrame-lab.ipynb  04-Series-DataFrame-lab.md  05-split-apply-combine-lab.ipynb  05-split-apply-combine-lab.md  06-visualization-lab.ipynb  06-visualization-lab.md  06_visualization_lab.ipynb  07-mongodb-json-lab.ipynb  07-mongodb-json-lab.md  08-aggregations.ipynb  08-aggregations.md  08-lab-regular-expressions.ipynb  09-chatmodels.ipynb  09-lab-regular-expressions.ipynb  09-lab-regular-expressions.md  09-mongodb-json-lab.ipynb  09-pushing-skills-beyond.ipynb  10-aggregations.ipynb  (+6 more)
slides/: rise.css  (+38 more)
(+6 files in other folders)
